--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ python:
 install:
   - pip install pipenv
   - pipenv install
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - pipenv run python3 setup.py coverage
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
